--- a/React-login/package.json
+++ b/React-login/package.json
@@ -2,7 +2,6 @@
   "name": "react-login",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -20,6 +19,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@tailwindcss/postcss7-compat": "^2.2.17",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@vitejs/plugin-react": "^4.3.4",
