--- a/React-login/package.json
+++ b/React-login/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
+    "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "jwt-encode": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
